Styled footer and fixed alignment bug.

--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ li a:hover {
     border: 10px #967259;
 }
 
+.main-left {
+    display: flex;
+    flex-direction: column;
+}
+
 .content {
     height: 400px;
     padding: 70px;
@@ -60,7 +65,7 @@ li a:hover {
     flex: 1;
 }
 
-.top button {
+.main-btn {
     padding: 10px 20px;
     background: #967259;
     color: #fff;
@@ -68,6 +73,7 @@ li a:hover {
     cursor: pointer;
     text-transform: uppercase;
     margin-left: 20%;
+    align-self: center;
 }
 
 .title {
